RESOLVED FIXED134622
Should not take background task assertion for NetworkProcess
https://bugs.webkit.org/show_bug.cgi?id=134622
Summary Should not take background task assertion for NetworkProcess
Gavin Barraclough
Reported 2014-07-03 17:55:06 PDT
When the WebContent wants to complete a task in the background we take a process assertion on the child process, and also need to prevent the UI process from suspending. (see: https://bugs.webkit.org/show_bug.cgi?id=134563 ) However for the NetworkProcess we always just hold a process assertion, and don't want this to interfere with UIApp suspension.
Attachments
Fix (8.77 KB, patch)
2014-07-03 17:59 PDT, Gavin Barraclough
thorton: review+
Gavin Barraclough
Comment 1 2014-07-03 17:59:27 PDT
Gavin Barraclough
Comment 2 2014-07-03 18:13:15 PDT
Transmitting file data ....... Committed revision 170785.
Note You need to log in before you can comment on or make changes to this bug.